# src/Contexts/Worlds/World/Infrastructure/WorldRepositoryPrismaMySQL.ts
@@ -8,19 +8,48 @@ export class WorldRepositoryPrismaMySQL implements IWorldRepository {
 
   public async findById(_id: number): Promise<World> {
     return await prisma.world.findFirstOrThrow({
-        where: {
-          id: _id,
+      where: {
+        id: _id,
+      },
+      include: {
+        rewards: true,
+        waves: {
+          include: {
+            mobs: true
+          }
         }
-      });
+      },
+    });
   }
+  
 
   public async findByRace(_race: number): Promise<World[]> {
     return await prisma.world.findMany({
         where: {
           race: _race,
-        }
+        },
+        include: {
+          rewards: true,
+          waves: {
+            include: {
+              mobs: true
+            }
+          }
+        },
       });
   }
 
+  public async findAllWorlds(): Promise<World[]> {
+    return await prisma.world.findMany({
+        include: {
+          rewards: true,
+          waves: {
+            include: {
+              mobs: true
+            }
+          }
+        },
+      });
+  }
 
 }
